test fix iframe on ios

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -618,13 +618,13 @@ a:last-of-type.btn:hover {
   max-height: 700px!important;
 }
 
-iframe, object, embed {
+/*iframe, object, embed {
   max-width: 100%!important;
   max-height: 700px!important;
   margin: 0 auto;
   display: block;
   flex-basis: 100%;
-}
+}*/
 
 @media screen and (max-width: 42em) {
   .embed-container iframe,
@@ -633,11 +633,11 @@ iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
   }
-  iframe, object, embed {
+  /*iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
     flex-basis: 0px;
-  }
+  }*/
 }
 
 
